kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: tomseimandiinsee/django-ssplab
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: "/usr/share/data/"
          name: myapp-pv
      volumes:
      - name: myapp-pv
        persistentVolumeClaim:
          claimName: myapp-pvc
