kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-ssplab-service
spec:
  selector:
    app: site-ssplab
  ports:
  - port: 80
    targetPort: 8000
