kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ssplab
  labels:
    name: site-ssplab
spec:
  rules:
  - host: ssplab.lab.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: site-ssplab
            port: 
              number: 80
